app/assets/stylesheets/item.css.scss
/* ... */
  /* Tablet Portrait size to standard 960 (devices and browsers) */
  @media only screen and (min-width: 960px) and (max-width: 1040px) {
  .footer {
    display: none;
    }
  .item-grid {
    @include clearfix;
    margin-left: auto;
    margin-right: auto;
    width: 680px;
    .item {
      width: 300px;
      height: 300px;
      background-size: cover;
      background-position: 50% 50%;
      float: left;
      margin: 10px;
      }
    }

    .sidebar {
      width: 290px;
    }
    .content {
      margin-left: 290px;
    }
    .logo {
      width: 285px;
    }
    .sidebar-top{
      margin-left: -39px;
    }

    h1, h2{
      font-size: 40px;
      padding: 0 3%;
    }

    .scrollleft, .scrollright {
      display: none;
    }

    .top-bar .top-bar-content {
      margin-left: 290px;
      color: #C59D5E;
      text-align: center;
      font-size: 12px;
      font-weight: lighter;
      line-height: 44px;
      text-transform: uppercase;
      letter-spacing: 4px;
    }
  }

  /* All Mobile Sizes (devices and browser) */
  @media only screen and (min-width: 775px) and (max-width: 960px) {
  
  .mobile-navigation {
    display: block;
  }

  .footer {
    display: none;
    }
  .item-grid {
    @include clearfix;
    // padding: 7px 20px;
    margin-left: auto;
    margin-right: auto;
    width: 340px;
    .item {
      width: 320px;
      height: 320px;
      background-size: cover;
      background-position: 50% 50%;
      float: left;
      margin: 10px;
      }
    }

    .sidebar {
      width: 290px;
    }
    .content {
      margin-left: 290px;
    }
    .logo {
      width: 285px;
    }
    .sidebar-top{
      margin-left: -39px;
    }

    h1, h2{
      font-size: 40px;
      padding: 0 3%;
    }

    .top-bar .top-bar-content {
      margin-left: 290px;
      color: #C59D5E;
      text-align: center;
      font-size: 12px;
      font-weight: lighter;
      line-height: 44px;
      text-transform: uppercase;
      letter-spacing: 4px;
    }
    .scrollleft, .scrollright {
      display: none;
    }
  }

  /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
  @media only screen and (min-width: 500px) and (max-width: 775px) {

    .mobile-navigation {
      display: block;
    }

    .item-grid {
    @include clearfix;
    padding: 7px 20px;
    margin-left: auto;
    margin-right: auto;
    width: 344px;
    }

    .back {
      display: none;
    }

    .sidebar {
      display: none;
    }
    .content {
      margin-left: auto;
      margin-right: auto;
    }
    .sidebar-top{
      margin-left: -39px;
    }

    .mobile-menu {
      font-size: 1.5em;
      display: block;
      height: 36px;
      width: 24px;
      padding: 14px 24px;
    }

    h1, h2{
      font-size: 40px;
      margin-top: 6%;
      margin-bottom: 8px;
    }
    .top-bar {
      height: 28px;
    }
    .top-bar .top-bar-content {
      margin-left: 0px;
      color: #C59D5E;
      text-align: center;
      font-size: 12px;
      font-weight: lighter;
      line-height: 30px;
      text-transform: uppercase;
      letter-spacing: 4px;
    }
    .top-nav {
      display: block;
      height: 60px;
      background: #ecebe9;
      width: 85%;
      text-align: center;
      position: relative;
    }
    .menu {
      background: #cbcac9;
      width: 15%;
      height: 60px;
      text-align: center;
      position: absolute;
      top: 28px;
      right: 0;
      }
    .logotype {
      width: 90%;
      margin-top: 3px;
      max-width: 400px;
    }

    h3 {
      margin-top: 0;
      font-size: 18px;
    }

    .mobile-menu {
      font-size: 1.5em;
      display: block;
      height: 36px;
      width: 100%;
      padding: 14px 0;
    }
    .footer {
      display: block;
      background: #c6c4c2;
      position: relative;
      ul.copyright {
        display: none;
      }
      ul.submenu {
        display: inline-block;
        width: 100%;
        padding: 0;
        text-align: center;
        text-transform: uppercase;
        li {
          text-align: center;
          padding: 0 10%;
          font-size: 1em;
          display: inline;
        }
      }

      .bottom-bar {
        width: 100%;
        background: image_url('topbar.bg.gif') repeat-x top left;
        color: $gold_color;
        text-align: center;
        font-size: 11px;
        font-weight: lighter;
        text-transform: uppercase;
        letter-spacing: 2px;
        padding: 10px 0 6px 0;
        display: block;
        position: relative;
      }
    }
    .scrollleft, .scrollright {
      display: none;
    }
  }
/* ... */

